--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
-/node_modules/
+node_modules/
 .DS_Store
+Thumbs.db
 dist/
+build/
 .env
 .env.local
 .env.*.local
 .vscode/
 .idea/
 coverage/
+*.tgz
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
