--- a/package.json
+++ b/package.json
@@ -37,14 +37,15 @@
     "@types/cross-spawn": "^6.0.6",
     "@types/node": "^25.0.5",
     "@vercel/detect-agent": "^1.0.0",
+    "execa": "^9.6.1",
     "cross-spawn": "^7.0.6",
     "mri": "^1.2.0",
     "picocolors": "^1.1.1",
-    "tsdown": "^0.18.4"
-  },
-  "dependencies": {
-    "execa": "^9.6.1",
+    "tsdown": "^0.18.4",
     "typescript": "^5.9.3",
     "vitest": "^4.0.16"
+  },
+  "dependencies": {
+    
   }
 }
