Enhance npm publish workflow by adding build steps and NPM token validation

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,6 +16,8 @@ jobs:
         with:
           node-version: 20
       - run: npm ci
+      - name: Build before tests
+        run: npm run build
       - run: npm test
 
   publish-npm:
@@ -28,6 +30,13 @@ jobs:
           node-version: 20
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: npm publish
+      - name: Build
+        run: npm run build
+      - name: Check NPM token is configured
+        if: ${{ secrets.NPM_TOKEN == '' }}
+        run: |
+          echo "NPM_TOKEN secret is not set. Create an npm automation token in npm and add it as a repository secret named NPM_TOKEN (Settings > Secrets and variables > Actions)." >&2
+          exit 1
+      - run: npm publish --access public --provenance
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
