--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-bite",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "license": "MIT",
   "author": "sumangal karan",
@@ -45,7 +45,5 @@
     "typescript": "^5.9.3",
     "vitest": "^4.0.16"
   },
-  "dependencies": {
-    
-  }
+  "dependencies": {}
 }
