Add publishConfig to package.json for npm publishing

--- a/package.json
+++ b/package.json
@@ -45,5 +45,10 @@
     "typescript": "^5.9.3",
     "vitest": "^4.0.16"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public",
+    "provenance": true
+  }
 }
