Ensure NPM_TOKEN is set in the environment for npm publishing step

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -52,3 +52,5 @@ jobs:
         run: npm whoami
       - name: Publish to npm with Bun
         run: bun publish --access public --registry https://registry.npmjs.org/
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
