--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "dependencies": {},
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
-    "access": "public",
-    "provenance": true
+    "access": "public"
+    
   }
 }
